fix note overflow

--- a/server/sonar-web/src/main/js/components/controls/SearchBox.css
+++ b/server/sonar-web/src/main/js/components/controls/SearchBox.css
@@ -47,10 +47,15 @@
 .search-box-note {
   position: absolute;
   top: 1px;
+  left: 40px;
   right: var(--controlHeight);
   line-height: calc(var(--controlHeight));
   color: var(--secondFontColor);
   font-size: var(--smallFontSize);
+  text-align: right;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .search-box-input:focus ~ .search-box-magnifier {
